--- a/src/components/specialOffer/AdvertiseSwipe.css
+++ b/src/components/specialOffer/AdvertiseSwipe.css
@@ -3,6 +3,6 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
-  margin-top: 40px;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
